Enhance SemT DAG Builder CLI and templates. Updated the CLI to support subcommands for converting notebooks, initializing environments, and managing local stacks. Improved DAG generation with Docker image and network configuration options. Updated README for clearer usage instructions and added runtime templates to the project structure. Modified .gitignore to include new directories.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,5 +48,6 @@ include = ["nb2scripts*"]
 [tool.setuptools.package-data]
 nb2scripts = [
   "templates/*.j2",
-  "templates/operations/*.j2"
+  "templates/operations/*.j2",
+  "runtime_templates/*"
 ]
